--- a/ConcessionariaAPP/appsettings.json
+++ b/ConcessionariaAPP/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=ConcessionariaDb;User Id=sa;Password=MinhaSenhaForte!ParaoDesaioIntelectah2025;Encrypt=True;TrustServerCertificate=True"
-  }
+  },
+  "RUN_DEMO_SEED": "False"
 }
